--- a/ARTPDDPWA/manifest.json
+++ b/ARTPDDPWA/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Buscador de Artículos",
   "short_name": "Buscador",
-  "start_url": "./index.html",
-  "scope": "./",
+  "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#f9f9f9",
   "theme_color": "#0066cc",
@@ -20,3 +20,4 @@
     }
   ]
 }
+
