--- a/POSMOVIL/manifest.json
+++ b/POSMOVIL/manifest.json
@@ -1,12 +1,56 @@
 {
-  "name": "ProvSoft POS",
-  "short_name": "ProvPOS",
+  "name": "PROVSOFT POS – Ruta de Venta",
+  "short_name": "POS Ruta",
+  "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta.",
   "start_url": "./index.html",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#00416A",
   "theme_color": "#0c6cbd",
+  "lang": "es-MX",
+  "scope": "./",
+  "categories": ["business", "productivity", "sales"],
+
   "icons": [
-    { "src": "logo_proveedora.webp", "sizes": "192x192", "type": "image/webp" },
-    { "src": "logo_proveedora.webp", "sizes": "512x512", "type": "image/webp" }
+    {
+      "src": "logo_proveedora.webp",
+      "sizes": "192x192",
+      "type": "image/webp"
+    },
+    {
+      "src": "logo_proveedora_512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "logo_proveedora_maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+
+  "shortcuts": [
+    {
+      "name": "Nueva Venta",
+      "short_name": "Venta",
+      "description": "Abrir la pantalla principal del POS",
+      "url": "./index.html",
+      "icons": [{ "src": "icons/venta.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Reimpresiones",
+      "short_name": "Tickets",
+      "description": "Abrir la sección de reimpresión de tickets",
+      "url": "./index.html#reimpresion",
+      "icons": [{ "src": "icons/ticket.png", "sizes": "192x192" }]
+    },
+    {
+      "name": "Corte del Día",
+      "short_name": "Corte",
+      "description": "Abrir la app de cortes diarios",
+      "url": "./corte.html",
+      "icons": [{ "src": "icons/corte.png", "sizes": "192x192" }]
+    }
   ]
 }
