--- a/POSMOVIL/manifest.json
+++ b/POSMOVIL/manifest.json
@@ -13,17 +13,22 @@
 
   "icons": [
     {
-      "src": "logo_proveedora.webp",
+      "src": "icons/logo_proveedora_192.png",
       "sizes": "192x192",
-      "type": "image/webp"
+      "type": "image/png"
     },
     {
-      "src": "logo_proveedora_512.png",
+      "src": "icons/logo_proveedora_256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/logo_proveedora_512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "logo_proveedora_maskable.png",
+      "src": "icons/logo_proveedora_maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
@@ -36,21 +41,21 @@
       "short_name": "Venta",
       "description": "Abrir la pantalla principal del POS",
       "url": "./index.html",
-      "icons": [{ "src": "icons/venta.png", "sizes": "192x192" }]
+      "icons": [{ "src": "icons/logo_proveedora_192.png", "sizes": "192x192" }]
     },
     {
       "name": "Reimpresiones",
       "short_name": "Tickets",
       "description": "Abrir la sección de reimpresión de tickets",
       "url": "./index.html#reimpresion",
-      "icons": [{ "src": "icons/ticket.png", "sizes": "192x192" }]
+      "icons": [{ "src": "icons/logo_proveedora_192.png", "sizes": "192x192" }]
     },
     {
       "name": "Corte del Día",
       "short_name": "Corte",
       "description": "Abrir la app de cortes diarios",
       "url": "./corte.html",
-      "icons": [{ "src": "icons/corte.png", "sizes": "192x192" }]
+      "icons": [{ "src": "icons/logo_proveedora_192.png", "sizes": "192x192" }]
     }
   ]
 }
