--- a/POSMOVIL/manifest.json
+++ b/POSMOVIL/manifest.json
@@ -1,38 +1,25 @@
 {
-  "name": "Ruta de Venta PDD",
+  "name": "Ruta de Venta PDD – Dulces y Desechables",
   "short_name": "Ruta PDD",
-  "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta.",
+  "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta de dulces y desechables.",
   "start_url": "./index.html",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#00416A",
+  "background_color": "#002b4e",
   "theme_color": "#0c6cbd",
   "lang": "es-MX",
   "scope": "./",
   "categories": ["business", "productivity", "sales"],
 
   "icons": [
-    {
-      "src": "icons/logo_proveedora_192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/logo_proveedora_256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/logo_proveedora_512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/logo_proveedora_maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
+    { "src": "icons/icon-72x72.png", "sizes": "72x72", "type": "image/png" },
+    { "src": "icons/icon-96x96.png", "sizes": "96x96", "type": "image/png" },
+    { "src": "icons/icon-128x128.png", "sizes": "128x128", "type": "image/png" },
+    { "src": "icons/icon-144x144.png", "sizes": "144x144", "type": "image/png" },
+    { "src": "icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon-256x256.png", "sizes": "256x256", "type": "image/png" },
+    { "src": "icons/icon-384x384.png", "sizes": "384x384", "type": "image/png" },
+    { "src": "icons/icon-512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
   ],
 
   "shortcuts": [
@@ -41,21 +28,21 @@
       "short_name": "Venta",
       "description": "Abrir la pantalla principal del POS",
       "url": "./index.html",
-      "icons": [{ "src": "icons/logo_proveedora_192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "icons/icon-192x192.png", "sizes": "192x192" }]
     },
     {
       "name": "Reimpresiones",
       "short_name": "Tickets",
       "description": "Abrir la sección de reimpresión de tickets",
-      "url": "./index.html#reimpresion",
-      "icons": [{ "src": "icons/logo_proveedora_192.png", "sizes": "192x192" }]
+      "url": "./RETICKES.html",
+      "icons": [{ "src": "icons/icon-192x192.png", "sizes": "192x192" }]
     },
     {
       "name": "Corte del Día",
       "short_name": "Corte",
       "description": "Abrir la app de cortes diarios",
       "url": "./corte.html",
-      "icons": [{ "src": "icons/logo_proveedora_192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "icons/icon-192x192.png", "sizes": "192x192" }]
     }
   ]
 }
