--- a/POSMOVIL/manifest.json
+++ b/POSMOVIL/manifest.json
@@ -3,6 +3,7 @@
   "short_name": "Ruta PDD",
   "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta de dulces y desechables.",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#002b4e",
