--- a/POSMOVIL/manifest.json
+++ b/POSMOVIL/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Ruta de Venta PDD – Dulces y Desechables",
   "short_name": "Ruta PDD",
-  "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta de dulces y desechables.",
+  "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta.",
   "start_url": "./index.html",
   "scope": "./",
   "display": "standalone",
@@ -9,41 +9,29 @@
   "background_color": "#002b4e",
   "theme_color": "#0c6cbd",
   "lang": "es-MX",
-  "scope": "./",
   "categories": ["business", "productivity", "sales"],
 
   "icons": [
-    { "src": "icons/icon-72x72.png", "sizes": "72x72", "type": "image/png" },
-    { "src": "icons/icon-96x96.png", "sizes": "96x96", "type": "image/png" },
-    { "src": "icons/icon-128x128.png", "sizes": "128x128", "type": "image/png" },
-    { "src": "icons/icon-144x144.png", "sizes": "144x144", "type": "image/png" },
-    { "src": "icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/icon-256x256.png", "sizes": "256x256", "type": "image/png" },
-    { "src": "icons/icon-384x384.png", "sizes": "384x384", "type": "image/png" },
-    { "src": "icons/icon-512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+    { "src": "./icons/icon-72x72.png", "sizes": "72x72", "type": "image/png" },
+    { "src": "./icons/icon-96x96.png", "sizes": "96x96", "type": "image/png" },
+    { "src": "./icons/icon-128x128.png", "sizes": "128x128", "type": "image/png" },
+    { "src": "./icons/icon-144x144.png", "sizes": "144x144", "type": "image/png" },
+    { "src": "./icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "./icons/icon-256x256.png", "sizes": "256x256", "type": "image/png" },
+    { "src": "./icons/icon-384x384.png", "sizes": "384x384", "type": "image/png" },
+    { "src": "./icons/icon-512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
   ],
 
   "shortcuts": [
     {
       "name": "Nueva Venta",
       "short_name": "Venta",
-      "description": "Abrir la pantalla principal del POS",
-      "url": "./index.html",
-      "icons": [{ "src": "icons/icon-192x192.png", "sizes": "192x192" }]
-    },
-    {
-      "name": "Reimpresiones",
-      "short_name": "Tickets",
-      "description": "Abrir la sección de reimpresión de tickets",
-      "url": "./RETICKES.html",
-      "icons": [{ "src": "icons/icon-192x192.png", "sizes": "192x192" }]
+      "url": "./index.html"
     },
     {
       "name": "Corte del Día",
       "short_name": "Corte",
-      "description": "Abrir la app de cortes diarios",
-      "url": "./corte.html",
-      "icons": [{ "src": "icons/icon-192x192.png", "sizes": "192x192" }]
+      "url": "./corte.html"
     }
   ]
 }
