--- a/POSMOVIL/manifest.json
+++ b/POSMOVIL/manifest.json
@@ -2,8 +2,8 @@
   "name": "Ruta de Venta PDD – Dulces y Desechables",
   "short_name": "Ruta PDD",
   "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta.",
-  "start_url": "./index.html",
-  "scope": "./",
+  "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#002b4e",
