--- a/POSMOVIL/manifest.json
+++ b/POSMOVIL/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Ruta PDD",
   "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta.",
   "start_url": "/POSMOVIL/index.html",
-  "scope": "/",
+  "scope": "/POSMOVIL/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#002b4e",
@@ -12,26 +12,26 @@
   "categories": ["business", "productivity", "sales"],
 
   "icons": [
-    { "src": "/icons/icon-72x72.png", "sizes": "72x72", "type": "image/png" },
-    { "src": "/icons/icon-96x96.png", "sizes": "96x96", "type": "image/png" },
-    { "src": "/icons/icon-128x128.png", "sizes": "128x128", "type": "image/png" },
-    { "src": "/icons/icon-144x144.png", "sizes": "144x144", "type": "image/png" },
-    { "src": "/icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-256x256.png", "sizes": "256x256", "type": "image/png" },
-    { "src": "/icons/icon-384x384.png", "sizes": "384x384", "type": "image/png" },
-    { "src": "/icons/icon-512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable any" }
+    { "src": "icons/icon-72x72.png", "sizes": "72x72", "type": "image/png" },
+    { "src": "icons/icon-96x96.png", "sizes": "96x96", "type": "image/png" },
+    { "src": "icons/icon-128x128.png", "sizes": "128x128", "type": "image/png" },
+    { "src": "icons/icon-144x144.png", "sizes": "144x144", "type": "image/png" },
+    { "src": "icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon-256x256.png", "sizes": "256x256", "type": "image/png" },
+    { "src": "icons/icon-384x384.png", "sizes": "384x384", "type": "image/png" },
+    { "src": "icons/icon-512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable any" }
   ],
 
   "shortcuts": [
     {
       "name": "Nueva Venta",
       "short_name": "Venta",
-      "url": "/index.html"
+      "url": "/POSMOVIL/index.html"
     },
     {
       "name": "Corte del Día",
       "short_name": "Corte",
-      "url": "/corte.html"
+      "url": "/POSMOVIL/corte.html"
     }
   ]
 }
