--- a/POSMOVIL/manifest.json
+++ b/POSMOVIL/manifest.json
@@ -2,8 +2,8 @@
   "name": "Ruta de Venta PDD – Dulces y Desechables",
   "short_name": "Ruta PDD",
   "description": "Sistema de punto de venta offline con sincronización automática para rutas de venta.",
-  "start_url": "/pwa-provsoft/POSMOVIL/index.html",
-  "scope": "/pwa-provsoft/POSMOVIL/",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#002b4e",
@@ -11,22 +11,22 @@
   "lang": "es-MX",
   "categories": ["business", "productivity", "sales"],
   "icons": [
-    { "src": "icons/icon-72x72.png", "sizes": "72x72", "type": "image/png" },
-    { "src": "icons/icon-96x96.png", "sizes": "96x96", "type": "image/png" },
-    { "src": "icons/icon-128x128.png", "sizes": "128x128", "type": "image/png" },
-    { "src": "icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/icon-512x512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "./icons/icon-72x72.png", "sizes": "72x72", "type": "image/png" },
+    { "src": "./icons/icon-96x96.png", "sizes": "96x96", "type": "image/png" },
+    { "src": "./icons/icon-128x128.png", "sizes": "128x128", "type": "image/png" },
+    { "src": "./icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "./icons/icon-512x512.png", "sizes": "512x512", "type": "image/png" }
   ],
   "shortcuts": [
     {
       "name": "Nueva Venta",
       "short_name": "Venta",
-      "url": "/pwa-provsoft/POSMOVIL/index.html"
+      "url": "./index.html"
     },
     {
       "name": "Corte del Día",
       "short_name": "Corte",
-      "url": "/pwa-provsoft/POSMOVIL/corte.html"
+      "url": "./corte.html"
     }
   ]
 }
