--- a/POSTVTA3/manifest.json
+++ b/POSTVTA3/manifest.json
@@ -2,7 +2,7 @@
   "name": "PROVSOFT POS – Ruta de Venta",
   "short_name": "POS Ruta",
   "description": "Sistema de ventas offline para rutas de La Proveedora",
-  "start_url": "./index.html",
+  "start_url": "./POS_RUTA_PROVSOFT_V3_DESC.html",
   "display": "standalone",
   "background_color": "#00416A",
   "theme_color": "#0c6cbd",
