Update start_url and add scope and id fields

--- a/POSVTA4/manifest.json
+++ b/POSVTA4/manifest.json
@@ -2,8 +2,10 @@
   "name": "PROVSOFT POS – Ruta de Venta",
   "short_name": "POS Ruta",
   "description": "Sistema de ventas offline para rutas de La Proveedora",
-  "start_url": "./POS_RUTA_PROVSOFT_V3_DESC.html",
+  "start_url": "./POSV4PASS.html",
+  "scope": "./",
   "display": "standalone",
+  "id": "pos-provsoft-ruta",
   "background_color": "#00416A",
   "theme_color": "#0c6cbd",
   "orientation": "portrait",
