--- a/POSVTA4/manifest.json
+++ b/POSVTA4/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "PROVSOFT POS – Ruta de Venta",
-  "short_name": "POS Ruta",
+  "name": "PROVSOFT POS 🎄",
+  "short_name": "POS Ruta🎄PDD",
   "description": "Sistema de ventas offline para rutas de La Proveedora",
   "start_url": "./POSV4PASS.html",
   "scope": "./",
